@@ -50,13 +50,14 @@ class Backend:
         raise NotImplementedError
 
     def run(self, args, env=None, input_text=None, get_output=False,
-            **kwargs):
+            echo=False, **kwargs):
         """Run a command in the target environment.
 
         :param args: the command and arguments to run.
         :param env: additional environment variables to set.
         :param input_text: input text to pass on the command's stdin.
         :param get_output: if True, return the output from the command.
+        :param echo: if True, print the command before executing it.
         :param kwargs: additional keyword arguments for `subprocess.Popen`.
         """
         raise NotImplementedError
