@@ -1,0 +1,175 @@
+# Copyright 2017 Canonical Ltd.  This software is licensed under the
+# GNU Affero General Public License version 3 (see the file LICENSE).
+
+__metaclass__ = type
+
+import subprocess
+
+from testtools import TestCase
+from testtools.matchers import (
+    AnyMatch,
+    Equals,
+    Is,
+    MatchesAll,
+    MatchesDict,
+    MatchesListwise,
+    )
+
+from lpbuildd.target.build_livefs import (
+    BuildLiveFS,
+    RETCODE_FAILURE_BUILD,
+    RETCODE_FAILURE_INSTALL,
+    )
+from lpbuildd.tests.fakeslave import FakeMethod
+
+
+class RanCommand(MatchesListwise):
+
+    def __init__(self, args, echo=None, **env):
+        kwargs_matcher = {}
+        if echo is not None:
+            kwargs_matcher["echo"] = Is(echo)
+        if env:
+            kwargs_matcher["env"] = MatchesDict(env)
+        super(RanCommand, self).__init__(
+            [Equals((args,)), MatchesDict(kwargs_matcher)])
+
+
+class RanAptGet(RanCommand):
+
+    def __init__(self, *args):
+        super(RanAptGet, self).__init__(["apt-get", "-y"] + list(args))
+
+
+class RanBuildCommand(RanCommand):
+
+    def __init__(self, command):
+        super(RanBuildCommand, self).__init__(
+            ["/bin/sh", "-c", "cd /build && " + command], echo=False)
+
+
+class TestBuildLiveFS(TestCase):
+
+    def test_run_build_command_no_env(self):
+        args = ["--backend=fake", "--series=xenial", "--arch=amd64", "1"]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.run_build_command(["echo", "hello world"])
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanBuildCommand("echo 'hello world'"),
+            ]))
+
+    def test_run_build_command_env(self):
+        args = ["--backend=fake", "--series=xenial", "--arch=amd64", "1"]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.run_build_command(
+            ["echo", "hello world"], env={"FOO": "bar baz"})
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanBuildCommand("env FOO='bar baz' echo 'hello world'"),
+            ]))
+
+    def test_install(self):
+        args = ["--backend=fake", "--series=xenial", "--arch=amd64", "1"]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.install()
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanAptGet("install", "livecd-rootfs"),
+            ]))
+
+    def test_install_i386(self):
+        args = ["--backend=fake", "--series=xenial", "--arch=i386", "1"]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.install()
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanAptGet("install", "livecd-rootfs"),
+            RanAptGet("--no-install-recommends", "install", "ltsp-server"),
+            ]))
+
+    def test_install_locale(self):
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--locale=zh_CN",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.install()
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanAptGet("install", "livecd-rootfs"),
+            RanAptGet(
+                "--install-recommends", "install", "ubuntu-defaults-builder"),
+            ]))
+
+    def test_build(self):
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--project=ubuntu",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.build()
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanBuildCommand("rm -rf auto"),
+            RanBuildCommand("mkdir -p auto"),
+            RanBuildCommand(
+                "ln -s /usr/share/livecd-rootfs/live-build/auto/config auto/"),
+            RanBuildCommand(
+                "ln -s /usr/share/livecd-rootfs/live-build/auto/build auto/"),
+            RanBuildCommand(
+                "ln -s /usr/share/livecd-rootfs/live-build/auto/clean auto/"),
+            RanBuildCommand("lb clean --purge"),
+            RanBuildCommand(
+                "env PROJECT=ubuntu ARCH=amd64 SUITE=xenial lb config"),
+            RanBuildCommand("env PROJECT=ubuntu ARCH=amd64 lb build"),
+            ]))
+
+    def test_build_locale(self):
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--locale=zh_CN",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.build()
+        self.assertThat(build_livefs.backend.run.calls, MatchesListwise([
+            RanBuildCommand(
+                "ubuntu-defaults-image --locale zh_CN --arch amd64 "
+                "--release xenial"),
+            ]))
+
+    def test_run_succeeds(self):
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--project=ubuntu",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        self.assertEqual(0, build_livefs.run())
+        self.assertThat(build_livefs.backend.run.calls, MatchesAll(
+            AnyMatch(RanAptGet("install", "livecd-rootfs")),
+            AnyMatch(RanBuildCommand(
+                "env PROJECT=ubuntu ARCH=amd64 lb build"))))
+
+    def test_run_install_fails(self):
+        class FailInstall(FakeMethod):
+            def __call__(self, run_args, *args, **kwargs):
+                super(FailInstall, self).__call__(run_args, *args, **kwargs)
+                if run_args[0] == "apt-get":
+                    raise subprocess.CalledProcessError(1, run_args)
+
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--project=ubuntu",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.backend.run = FailInstall()
+        self.assertEqual(RETCODE_FAILURE_INSTALL, build_livefs.run())
+
+    def test_run_build_fails(self):
+        class FailBuild(FakeMethod):
+            def __call__(self, run_args, *args, **kwargs):
+                super(FailBuild, self).__call__(run_args, *args, **kwargs)
+                if run_args[0] == "/bin/sh":
+                    raise subprocess.CalledProcessError(1, run_args)
+
+        args = [
+            "--backend=fake", "--series=xenial", "--arch=amd64", "1",
+            "--project=ubuntu",
+            ]
+        build_livefs = BuildLiveFS(args=args)
+        build_livefs.backend.run = FailBuild()
+        self.assertEqual(RETCODE_FAILURE_BUILD, build_livefs.run())
